# scraper

./: Cargo.toml  Dockerfile  README.md
src/: abstract_daemon_state.rs  abstract_state.rs  args.rs  bot.rs  bot_args.rs  contract_state.rs  lib.rs  metrics.rs  scraping_chains.rs
src/scraper/: mod.rs  scrape_data.rs  scraping_chains.rs  utils.rs
