[package]
name = "savings-bot"
version = "0.4.0"
edition = "2021"
publish = false

[[bin]]
name = "local"
path = "src/bin/local.rs"

[dependencies]
cw-orch = { version = "0.24.0", features = ["daemon"] }
cw-orch-interchain = { version = "0.3.0", features = ["daemon"] }

abstract-interface = { version = "0.23.0" }
abstract-client = { version = "0.23.0" }
abstract-std = { version = "0.23.0" }

cw-asset = { version = "3.0" }

cosmwasm-std = { version = "1.2" }
cosmos-sdk-proto = { version = "0.20.0" }
dotenv = "0.15.0"
env_logger = "0.11.2"
log = "0.4.20"
tonic = "0.10.0"
clap = { version = "4", features = ["derive"] }
humantime = "2.1.0"
prometheus = "0.13.2"
tokio = "1.26.0"
warp = "0.3.6"
semver = "1.0"
serde_json = "1"

[patch.crates-io]
# cw-orch = { git = "https://github.com/AbstractSDK/cw-orchestrator", branch = "scraper_updates" }
# cw-orch-interchain = { git = "https://github.com/AbstractSDK/cw-orchestrator", branch = "scraper_updates" }
